# tulisio

./: .gitignore  README.md  index.html  package.json  tsconfig.json
examples/MyNotesVault/.appconfig/: settings.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  markdown.rs  storage.rs
src/config/: settings.ts
src/editor/: NoteEditor.tsx
