[package]
name = "mynotesvault"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "1.0"
uuid = { version = "1.7", features = ["v4"] }
open = "5.0"
base64 = "0.21"
tauri = { version = "1.5.0", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
